worked on some of the phamacy bugs
